--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,36 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap");
 
-*{
+* {
   margin: 0;
-  padding:0 ;
+  padding: 0;
   box-sizing: border-box;
 }
-body{
-  font-family: 'Manrope', sans-serif;
-
+body {
+  font-family: "Manrope", sans-serif;
 }
 
 .logo-img {
   margin: 0px 55px;
-  width: 200px; 
+  width: 200px;
   height: auto;
 }
 
-.sticky__header{
+.sticky__header {
   width: 100%;
   height: 80px;
   line-height: 80px;
   position: sticky;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   z-index: 99999;
   background: white;
   box-shadow: 3px 3px -8px 3px #ddd;
-  
 }
 
-@media only screen and (max-width:768px) {
-  .navigation{
+@media only screen and (max-width: 768px) {
+  .navigation {
     width: 100%;
     height: 100%;
     position: fixed;
@@ -41,7 +39,7 @@ body{
     display: none;
   }
 
-  .menu{
+  .menu {
     width: 15rem;
     height: 100%;
     position: absolute;
@@ -53,39 +51,33 @@ body{
     justify-content: center;
     align-items: center;
     line-height: 30px;
-
   }
-  
- .show__menu{
-  display: block;
 
- }
-  
+  .show__menu {
+    display: block;
+  }
 }
 
-.hero-counter{
+.hero-counter {
   display: flex;
   flex-direction: row;
   display: block;
 }
 
-.grid{
+.grid {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   padding: 20px;
-
 }
 .grid div {
   min-height: 205px;
-
 }
-
 
 .mt-\[30px\] {
   margin-top: -40px;
 }
 
-.Upload-Photo{
-    padding: 14px;
+.Upload-Photo {
+  padding: 14px;
 }
