--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -81,3 +81,30 @@ body {
 .Upload-Photo {
   padding: 14px;
 }
+
+.swiper-pagination-bullet {
+  padding-top: ;
+  width: 12px;
+  height: 12px;
+  border: 1px solid #181a1e;
+  opacity: 100%;
+  background: #fff;
+}
+.swiper-pagination-bullet-active {
+  background: #0067ff;
+  border: none;
+}
+
+.swiper {
+  padding-bottom: 100px;
+}
+
+.swiper-slide.swiper-slide-next {
+  background: #0067ff;
+  border-radius: 12px;
+  box-shadow: 0px 20px 70px rgba(0, 103, 255, 0.3);
+}
+.swiper-slide.swiper-slide-next h4,
+.swiper-slide.swiper-slide-next p {
+  color: #fff;
+}
