--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -123,3 +123,14 @@ body {
 HiStar {
   color: yellow;
 }
+
+.img-fit {
+  width: 300px;
+  height: 350px;
+  object-fit: cover;
+}
+
+.tabsB {
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  background-color: #fffdf8;
+}
