--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -134,3 +134,9 @@ HiStar {
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   background-color: #fffdf8;
 }
+
+.object-fit {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
