--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -59,17 +59,17 @@
   }
 }
 
-.addQ{
-  @apply border bg-slate-200
+.addQ {
+  @apply border bg-slate-200;
 }
-.addD{
-  @apply border text-white bg-black hover:bg-white hover:text-black
-}
-
-.DelSVG{
-  @apply text-red-500
+.addD {
+  @apply border text-white bg-black hover:bg-white hover:text-black;
 }
 
-.flexCol{
-  @apply flex flex-col !gap-2
+.DelSVG {
+  @apply text-red-500;
+}
+
+.flexCol {
+  @apply flex flex-col !gap-2;
 }
